--- a/package.json
+++ b/package.json
@@ -15,18 +15,17 @@
     "@emotion/styled": "^11.10.5",
     "@fontsource/open-sans": "^4.5.13",
     "@fontsource/raleway": "^4.5.11",
-    "@reduxjs/toolkit": "^1.9.1",
+    "@loadable/component": "^5.15.3",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.2.2",
     "framer-motion": "^8.4.0",
     "react": "^18.2.0",
-    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-input-emoji": "^4.3.0",
-    "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
-    "socket.io-client": "^4.5.4"
+    "socket.io-client": "^4.5.4",
+    "use-detect-keyboard-open": "^0.4.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
